2005-02-20  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewrite(LambdaExp,Object,Translator): Rename
	to rewriteFormals, and add TemplateScope parameter.
	Make type of local templateScope more precise.
	(rewrite(LambdaExp,Object,Object,Translator,TemplateScope)): New.
	* kawa/standard/define.java (scanForm): Update rewrite->rewriteFormals.
	* kawa/lang/SyntaxForm.java (scope): Make type of field more precise.
	(<init>): Make private.
	(makeWithTemplate): Return argument if we don't have a SyntaxForm.
	* kawa/lang/SyntaxTemplate.java (execute, executeToList): Make
	templateScope parameter more precise.
	* kawa/standard/let.java (rewrite): Likewise for templateScope local.
	* kawa/standard/object.java (scanClassDef): Simplify - we don't need
	to remember template scopes here.
	(rewriteClassDef): See added comment.

	* kawa/standard/location.java (makeProcLocation$V): Can now simplify
	if proc is a LocationProc.

	* kawa/standard/require.java (importDefinitions): Remove duplicate
	setAlias and setIndirectBinding calls.

2005-02-17  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (makeAlias, makeRenamedAlias): Merge former
	into latter.  Set setDontDereference flag.
	(define): Use modified makeRenamedAlias.

2005-02-16  Per Bothner  <per@bothner.com>

	* kawa/standard/object.java (rewriteClassDef): If an input sub-form
	is a SyntaxForm remember that, and use it to setCurrentScope.
	Fixes Savannah PR 11822.
	(rewriteClassDef): Also use SyntaxForm to rewrite init forms.
	(scanClassDef): Fix some bugs in handling of init forms.

	* kawa/standard/define_class.java (scanForDefinitions): Handle the
	case that the input form is wrapped in a SyntaxForm.

2005-02-15  Per Bothner  <per@bothner.com>

	Use ModuleInfo to make sure 'run' is only done once, even if immediate.
	* kawa/standard/requier.java (find(String)): Use ModuleInfo.find.
	(find(ClassType, Environment), find(Class, Environment)): Remove.